packages/parser/tests/snapshots/blocks__attributes.snap
---
source: packages/parser/tests/blocks.rs
expression: examples.map(parse)
---
- Ok:
    meta: ~
    body:
      - kind:
          Marker:
            depth: 2
            kind: Heading
        attributes:
          - String: red
        children:
          - kind:
              Raw: My Heading
            attributes: ~
            children: ~
      - kind:
          Marker:
            depth: 2
            kind: Heading
        attributes:
          - String: red
        children:
          - kind:
              Raw: " My Heading"
            attributes: ~
            children: ~
      - kind:
          Marker:
            depth: 1
            kind: UnorderedList
        attributes: ~
        children:
          - kind:
              Raw: " list item with **red: BOLD** content"
            attributes: ~
            children: ~
