packages/parser/tests/snapshots/blocks__metadata.snap
---
source: packages/parser/tests/blocks.rs
assertion_line: 42
expression: examples.map(parse)
---
- Ok:
    meta: ~
    body:
      - kind:
          Marker:
            depth: 2
            kind: UnorderedList
        attributes: ~
        children: ~
