packages/parser/tests/snapshots/blocks__whitespace_equivalence.snap
---
source: packages/parser/tests/blocks.rs
expression: plain
---
Ok:
  meta: ~
  body:
    - Marker:
        kind: Heading
        depth: 1
        scope: Inline
        attributes: []
        children:
          - Text:
              value: My heading
